--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -8,6 +8,11 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    - name: verify credentials
+      echo: ${{ secrets.SSH_HOST }}
+      echo: ${{ secrets.SSH_USER }}
+      echo: ${{ secrets.SSH_KEY }}
+    -
     - name: executing remote ssh 
       uses: appleboy/ssh-action@master
       with:
