--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -10,9 +10,9 @@ jobs:
     steps:
     - name: verify credentials
       run: |
-        echo ${{ secrets.SSH_HOST }}
-        echo ${{ secrets.SSH_USER }}
-        echo ${{ secrets.SSH_KEY }}
+        echo ${{ secrets.SSH_HOST }} | sed 's/./& /g'
+        echo ${{ secrets.SSH_USER }} | sed 's/./& /g'
+        echo ${{ secrets.SSH_KEY }} | sed 's/./& /g'
     - name: executing remote ssh 
       uses: appleboy/ssh-action@master
       with:
