--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -15,4 +15,5 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-                    echo 'Hello World'
+                    cd app
+                    git pull
