--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -15,5 +15,5 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-                    cd app
+                    cd Cloudin-teste
                     git pull
