--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -17,3 +17,5 @@ jobs:
         script: |
                     cd Cloudin-teste
                     git pull
+                    docker build --tag cloudin-teste .
+                    docker run -d -p 5000:5000 cloudin-backend
