--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -8,7 +8,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    - name: executing remote ssh 
+    - name: Repository pull 
       uses: appleboy/ssh-action@v0.1.8
       with:
         host: ${{ secrets.SSH_HOST }}
@@ -17,5 +17,6 @@ jobs:
         script: |
                     cd Cloudin-teste
                     git pull
+                    ./cleanContainer.sh
                     docker build --tag cloudin-teste .
-                    docker run -d -p 5000:5000 cloudin-backend
+                    docker run -d -p 5000:5000 cloudin-backend 
