--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -19,4 +19,4 @@ jobs:
                     git pull
                     ./../cleanContainer.sh
                     docker build --tag cloudin-teste .
-                    docker run -d -p 5000:5000 cloudin-backend 
+                    docker run -d -p 5000:5000 cloudin-teste 
