--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,11 +1,13 @@
 name: Deploy to EC2
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+      branches: 
+       - main
+      types: [closed]
 jobs:
   build:
     name: Build
+    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
     - name: Repository pull 
